--- a/src/app/tmpl/500.html
+++ b/src/app/tmpl/500.html
@@ -21,7 +21,9 @@
     <div class="container">
 
       <h1>500 Internal Server Error</h1>
-
+: if $error {
+        <p><: $error :></p>
+: }
     </div> <!-- /container -->
   </body>
 </html>
